# aiida-atomistic

./: README.md  commit.txt  conftest.py  pyproject.toml
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_atomistic/: calculations.py  cli.py  helpers.py  parsers.py
aiida_atomistic/data/structure/: 5_feb.ipynb  hubbard.py  hubbard_qe_utils.py  hubbard_test.py  magnetic.py  new_implementation.ipynb  property.py  property_utils.py  prototype.py  structure.py
aiida_atomistic/data/structure/nb_testing/: 1_testing_immutability_and_unsupported.ipynb
aiida_atomistic/data/structure/old/: structure.py
aiida_atomistic/data/structure/old/properties/: hubbard.py  hubbard_qe_utils.py  magnetic.py  magnetic_qe_utils.py  property.py
aiida_atomistic/data/structure/old/tests/: Fe_bcc.mcif  magnetic_and_hubbard_test.py  magnetic_test.py  structure_test.py
aiida_atomistic/data/structure/properties/: __init__.py  custom.py  pbc.py  property_collector.py  property_utils.py
aiida_atomistic/data/structure/properties/globals/: cell.py  pbc.py
aiida_atomistic/data/structure/properties/intra_site/: charge.py  mass.py  position.py  symbols.py
aiida_atomistic/data/structure/properties/per_site/: charge.py  mass.py  position.py  symbols.py
aiida_atomistic/data/structure/tests/: hubbard_test.py  magnetic_and_hubbard_test.py  magnetic_test.py
docs/source/: conf.py  index.md  index.rst
docs/source/developer_guide/: index.md  index.rst
docs/source/reference/api/auto/aiida_atomistic/: index.rst
docs/source/reference/api/auto/conf/: index.rst
docs/source/reference/api/auto/conftest/: index.rst
docs/source/reference/api/auto/example_01/: index.rst
docs/source/reference/api/auto/hubbard/: index.rst
docs/source/reference/api/auto/hubbard_qe_utils/: index.rst
docs/source/reference/api/auto/hubbard_test/: index.rst
docs/source/reference/api/auto/input_files/: index.rst
docs/source/reference/api/auto/magnetic/: index.rst
docs/source/reference/api/auto/magnetic_and_hubbard_test/: index.rst
docs/source/reference/api/auto/magnetic_qe_utils/: index.rst
docs/source/reference/api/auto/magnetic_test/: index.rst
docs/source/reference/api/auto/property/: index.rst
docs/source/reference/api/auto/prototype/: index.rst
docs/source/reference/api/auto/structure/: index.rst
docs/source/reference/api/auto/structure_test/: index.rst
docs/source/reference/api/auto/tests/: index.rst
docs/source/user_guide/: get_started.md  get_started.rst  index.md
docs/source/user_guide/structuredata/: API_start.ipynb  core_developer_guide_structuredata.md  custom_properties.md  index.md  magnetic_property.md  pbc_property.md  structuredata.md  user_guide_SData.ipynb
examples/: example_01.py
src/aiida_atomistic/data/: __init__.py
src/aiida_atomistic/data/structure/: __init__.py  from_atomistic_to_orm.ipynb  get_kinds.ipynb  performance_test.ipynb  structure_inherit.py
src/aiida_atomistic/data/structure/old/tests/: hubbard_test.py  (+1 more)
src/aiida_atomistic/data/structure/old_nb_testing/: 0_new_implementation_before_converting_to_scripts.ipynb
src/aiida_atomistic/data/structure/properties/: __init__.py  custom.py  property_utils.py
tests/: test_calculations.py  test_cli.py
tests/data/: test_cell.py  test_pbc.py  test_structure.py
user_stories/: StructureData.md
(+16 files in other folders)
